@@ -2,7 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
-sudox-3.4 (19 Dec 2011)
+sudox-3.4 (26 Dec 2011)
 
-  19 Nov 2011; Martin Väth <martin@mvath.de>
+  26 Dec 2011; Martin Väth <martin@mvath.de>
+  Add app-admin/sudo to RDEPEND
+
+  19 Dec 2011; Martin Väth <martin@mvath.de>
   New ebuild from scratch.
